<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/title"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_gravity="center_horizontal" />

        <Button
            style="@style/ObjectivelyRadical"
            android:text="@string/button_1_text"
            android:id="@+id/button" />

        <Space
            android:layout_width="20px"
            android:layout_height="20px" />

        <Button
            style="@style/ObjectivelyRadical"
            android:text="@string/button_2_text"
            android:id="@+id/button2" />

        <Space
            android:layout_width="20px"
            android:layout_height="20px" />

        <Button
            style="@style/ObjectivelyRadical"
            android:text="@string/button_3_text"
            android:id="@+id/button3"/>

        <Space
            android:layout_width="20px"
            android:layout_height="20px" />

        <Button
            style="@style/ObjectivelyRadical"
            android:text="@string/button_4_text"
            android:id="@+id/button4" />

        <Space
            android:layout_width="20px"
            android:layout_height="20px" />

        <Button
            style="@style/ObjectivelyRadical"
            android:text="@string/button_5_text"
            android:id="@+id/button5" />

        <Space
            android:layout_width="20px"
            android:layout_height="20px" />

        <Button
            style="@style/ObjectivelyRadical"
            android:text="@string/button_6_text"
            android:id="@+id/button6"/>
    </LinearLayout>

</RelativeLayout>
